--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,1 +1,10 @@
-<p>posts works!</p>
+<!-- Parent component template -->
+<div *ngFor="let post of posts">
+    <!--  To pass data from a parent component to a child component using the post input property,
+         we would use the child component in the parent component's template like this: -->
+    <app-post [post]="post" (deletePost)="deletePost(post)"></app-post>
+    <!-- Here, post is a property defined in the parent component that we 
+        want to pass to the post @Input property of the child component. -->
+    <!-- To listen for the buttonClick event in the parent component, we would add
+        deletePost to the parent component -->
+</div>
