--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,5 +1,5 @@
 <!-- Parent component template -->
-<div *ngFor="let post of posts">
+<div *ngFor="let post of posts" class="posts">
     <!--  To pass data from a parent component to a child component using the post input property,
          we would use the child component in the parent component's template like this: -->
     <app-post [post]="post" (deletePost)="deletePost(post)"></app-post>
